	to assign cache-specific timeout which will be used instead of 
	global config.tcl.cachetimeout and will eliminate specifying 
	-timeout on every ns_cache_eval call. If specified as 0 on cache 
	create, cache will behave as before, taking -timeout or using 
	global value from the config. Introduced new API function 
	Ns_CacheGetConfig that returns configured cache parameters.

	* nsd/nsconf.c:
	* nsd/dns.c: Updated to reflect API  change and added new config 
	parameter dnswaittimeout which is set to 0 by default

2006-06-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclinit.c: Fixed return value of non-void call. 
	* nsd/cache.c:  Fixed Ns_CacheSetValueExpires() to correctly
	set expiry time of the entry.
	Changed Ns_CacheFindEntry() NOT to auto-expire expired entries
	as this collides with Ns_CacheWaitCreateEntry API call.

2006-05-26  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/return.c:
	* nsd/tclrequest.c:
	* nsd/tclresp.c:
	* nsd/tclcallbacks.c:
	* nsd/tclcmds.c:
	* nsd/tclcache.c:
	* nsd/tclinit.c:
	* nsd/tcljob.c:
	* nsd/conn.c:
	* tests/timeout.test: Catch Tcl errors with error code NS_TIMEOUT
	and return an HTTP 503 Unavailable response. Update some Tcl
	commande to set the NS_TIMEOUT error code.

	* nsd/queue.c:
	* nsd/return.c:
	* tests/test.nscfg:
	* tests/errordoc.test: Make sure custom error documents return the
	correct HTTP error code.

2006-05-13  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* sampe-config.tcl.in: Loads nsproxy module and initializes
	with all the default values. The default values are the same
	as ones compiled in the code. Those are just listed for the
	illustration purposes.
	
	* nsproxy/Makefile
	* nsproxy/ns_proxy.man:
	* nsproxy/ns_proxy.test:
	* nsproxy/nsproxy.c:
	* nsproxy/nsproxy.h:
	* nsproxy/nsproxylib.c:
	* nsproxy/nsproxymod.c: Summary of changes below:

	o. Fixed deadly embrace between the reaper and user threads.